--- a/Twitter/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Twitter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zlf-lh-FZL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TqR-d0-WIf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -44,6 +44,7 @@
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9bK-e8-0gm">
                                     <rect key="frame" x="150" y="20" width="75" height="75"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="75" id="7jz-G1-D7y"/>
                                         <constraint firstAttribute="height" constant="75" id="JDo-B0-e5D"/>
@@ -95,7 +96,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9m-ea-Lpc">
-                                            <rect key="frame" x="68" y="52" width="281" height="83"/>
+                                            <rect key="frame" x="68" y="52" width="297" height="83"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -113,8 +114,14 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="@pseudohipster" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYn-wK-mXv">
-                                            <rect key="frame" x="195" y="21" width="154" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x54-k9-Agl">
+                                            <rect key="frame" x="328.5" y="21" width="20.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="@pseudohipster" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYn-wK-mXv">
+                                            <rect key="frame" x="195" y="21" width="125.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="highlightedColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -122,13 +129,15 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="X9m-ea-Lpc" firstAttribute="top" secondItem="IYn-wK-mXv" secondAttribute="bottom" constant="10" id="2jd-KB-rpM"/>
-                                        <constraint firstItem="X9m-ea-Lpc" firstAttribute="trailing" secondItem="IYn-wK-mXv" secondAttribute="trailing" id="9m6-A0-1KD"/>
+                                        <constraint firstItem="x54-k9-Agl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="IYn-wK-mXv" secondAttribute="trailing" constant="5" id="BFO-SE-22u"/>
                                         <constraint firstItem="IYn-wK-mXv" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="CYM-Gf-tka"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="IYn-wK-mXv" secondAttribute="trailing" constant="10" id="PN0-kR-OOE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="x54-k9-Agl" secondAttribute="trailing" constant="10" id="JkO-fc-sM7"/>
                                         <constraint firstItem="IYn-wK-mXv" firstAttribute="leading" secondItem="ga3-GO-RvG" secondAttribute="trailing" constant="5" id="Pdx-m6-UcB"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="X9m-ea-Lpc" secondAttribute="bottom" constant="10" id="QcJ-lD-zH3"/>
                                         <constraint firstItem="X9m-ea-Lpc" firstAttribute="leading" secondItem="KNj-GR-1E4" secondAttribute="trailing" constant="8" id="QqQ-0l-z2e"/>
+                                        <constraint firstItem="x54-k9-Agl" firstAttribute="top" secondItem="IYn-wK-mXv" secondAttribute="top" id="UUM-AP-FtR"/>
                                         <constraint firstItem="X9m-ea-Lpc" firstAttribute="top" secondItem="ga3-GO-RvG" secondAttribute="bottom" constant="10" id="ZOr-fv-SNr"/>
+                                        <constraint firstAttribute="trailing" secondItem="X9m-ea-Lpc" secondAttribute="trailing" constant="10" id="aR3-W1-IYL"/>
                                         <constraint firstItem="ga3-GO-RvG" firstAttribute="leading" secondItem="KNj-GR-1E4" secondAttribute="trailing" constant="8" id="gQW-HG-LWa"/>
                                         <constraint firstItem="ga3-GO-RvG" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="jcg-MR-0k0"/>
                                         <constraint firstItem="KNj-GR-1E4" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="vCn-SE-hpg"/>
@@ -137,6 +146,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="avatarImageView" destination="KNj-GR-1E4" id="7a8-F8-zl4"/>
+                                    <outlet property="dateLabel" destination="x54-k9-Agl" id="Via-zX-Tc0"/>
                                     <outlet property="handleLabel" destination="IYn-wK-mXv" id="7sD-CT-whh"/>
                                     <outlet property="nameLabel" destination="ga3-GO-RvG" id="Kdx-H7-Atq"/>
                                     <outlet property="tweetLabel" destination="X9m-ea-Lpc" id="fAb-6Z-L1v"/>
@@ -177,10 +187,10 @@
             </objects>
             <point key="canvasLocation" x="-446" y="-359"/>
         </scene>
-        <!--Split View Controller-->
+        <!--Twitter Split View Controller-->
         <scene sceneID="7PR-Bd-Psc">
             <objects>
-                <splitViewController id="zlf-lh-FZL" sceneMemberID="viewController">
+                <splitViewController id="zlf-lh-FZL" customClass="TwitterSplitViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="CyG-4r-3Ar" kind="relationship" relationship="masterViewController" id="Swl-YZ-hyA"/>
                         <segue destination="f8P-D2-cbv" kind="relationship" relationship="detailViewController" id="R3G-ZD-ctD"/>
