create detail view.

--- a/Twitter/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Twitter/Base.lproj/Main.storyboard
@@ -1,31 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TqR-d0-WIf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zlf-lh-FZL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="HGI-90-A7p">
-            <objects>
-                <viewController id="f8P-D2-cbv" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AAU-bf-INW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="zUx-de-5a2"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HgG-aS-kP6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-446" y="306"/>
-        </scene>
         <!--Timeline-->
         <scene sceneID="gSJ-GB-Loq">
             <objects>
@@ -87,72 +70,6 @@
                                 <constraint firstAttribute="bottom" secondItem="Pip-Ub-rgB" secondAttribute="bottom" id="vy7-ca-jRT"/>
                             </constraints>
                         </view>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="156" id="y8N-Yl-4TH" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="240" width="375" height="156"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y8N-Yl-4TH" id="cAu-N3-btn">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="155.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9m-ea-Lpc">
-                                            <rect key="frame" x="68" y="52" width="297" height="83"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KNj-GR-1E4">
-                                            <rect key="frame" x="10" y="21" width="50" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="50" id="4UC-wV-fFq"/>
-                                                <constraint firstAttribute="height" constant="50" id="gPY-Ok-2N5"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Anthony HOang" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ga3-GO-RvG">
-                                            <rect key="frame" x="68" y="21" width="122" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x54-k9-Agl">
-                                            <rect key="frame" x="328.5" y="21" width="20.5" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="@pseudohipster" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYn-wK-mXv">
-                                            <rect key="frame" x="195" y="21" width="125.5" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <color key="highlightedColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="X9m-ea-Lpc" firstAttribute="top" secondItem="IYn-wK-mXv" secondAttribute="bottom" constant="10" id="2jd-KB-rpM"/>
-                                        <constraint firstItem="x54-k9-Agl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="IYn-wK-mXv" secondAttribute="trailing" constant="5" id="BFO-SE-22u"/>
-                                        <constraint firstItem="IYn-wK-mXv" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="CYM-Gf-tka"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="x54-k9-Agl" secondAttribute="trailing" constant="10" id="JkO-fc-sM7"/>
-                                        <constraint firstItem="IYn-wK-mXv" firstAttribute="leading" secondItem="ga3-GO-RvG" secondAttribute="trailing" constant="5" id="Pdx-m6-UcB"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="X9m-ea-Lpc" secondAttribute="bottom" constant="10" id="QcJ-lD-zH3"/>
-                                        <constraint firstItem="X9m-ea-Lpc" firstAttribute="leading" secondItem="KNj-GR-1E4" secondAttribute="trailing" constant="8" id="QqQ-0l-z2e"/>
-                                        <constraint firstItem="x54-k9-Agl" firstAttribute="top" secondItem="IYn-wK-mXv" secondAttribute="top" id="UUM-AP-FtR"/>
-                                        <constraint firstItem="X9m-ea-Lpc" firstAttribute="top" secondItem="ga3-GO-RvG" secondAttribute="bottom" constant="10" id="ZOr-fv-SNr"/>
-                                        <constraint firstAttribute="trailing" secondItem="X9m-ea-Lpc" secondAttribute="trailing" constant="10" id="aR3-W1-IYL"/>
-                                        <constraint firstItem="ga3-GO-RvG" firstAttribute="leading" secondItem="KNj-GR-1E4" secondAttribute="trailing" constant="8" id="gQW-HG-LWa"/>
-                                        <constraint firstItem="ga3-GO-RvG" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="jcg-MR-0k0"/>
-                                        <constraint firstItem="KNj-GR-1E4" firstAttribute="top" secondItem="cAu-N3-btn" secondAttribute="topMargin" constant="10" id="vCn-SE-hpg"/>
-                                        <constraint firstItem="KNj-GR-1E4" firstAttribute="leading" secondItem="cAu-N3-btn" secondAttribute="leading" constant="10" id="zkL-mR-ChQ"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="avatarImageView" destination="KNj-GR-1E4" id="7a8-F8-zl4"/>
-                                    <outlet property="dateLabel" destination="x54-k9-Agl" id="Via-zX-Tc0"/>
-                                    <outlet property="handleLabel" destination="IYn-wK-mXv" id="7sD-CT-whh"/>
-                                    <outlet property="nameLabel" destination="ga3-GO-RvG" id="Kdx-H7-Atq"/>
-                                    <outlet property="tweetLabel" destination="X9m-ea-Lpc" id="fAb-6Z-L1v"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="TqR-d0-WIf" id="7Vi-FH-ZG0"/>
                             <outlet property="delegate" destination="TqR-d0-WIf" id="vPm-65-rDx"/>
@@ -193,12 +110,40 @@
                 <splitViewController id="zlf-lh-FZL" customClass="TwitterSplitViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="CyG-4r-3Ar" kind="relationship" relationship="masterViewController" id="Swl-YZ-hyA"/>
-                        <segue destination="f8P-D2-cbv" kind="relationship" relationship="detailViewController" id="R3G-ZD-ctD"/>
+                        <segue destination="03u-Wj-66K" kind="relationship" relationship="detailViewController" id="Egs-PU-44Q"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RMV-ew-ClQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1399" y="-27"/>
+        </scene>
+        <!--Tweet Detail View Controller-->
+        <scene sceneID="2k0-Kx-U4S">
+            <objects>
+                <tableViewController storyboardIdentifier="tweetDetail" id="03u-Wj-66K" customClass="TweetDetailViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wOe-XO-kOI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yk3-uY-XOA">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yk3-uY-XOA" id="y78-IA-iRD">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="03u-Wj-66K" id="Ii8-l5-dTu"/>
+                            <outlet property="delegate" destination="03u-Wj-66K" id="6G0-VW-p9s"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dde-sU-r2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-484" y="346"/>
         </scene>
     </scenes>
 </document>
