--- a/Twitter/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Twitter/Base.lproj/Main.storyboard
@@ -125,6 +125,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yk3-uY-XOA">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -140,6 +141,8 @@
                             <outlet property="delegate" destination="03u-Wj-66K" id="6G0-VW-p9s"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dde-sU-r2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
