--- a/Twitter/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Twitter/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="H0n-sU-cK9" customClass="ProfileHeader" customModule="Twitter" customModuleProvider="target">
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="H0n-sU-cK9">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="212"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
